# lptools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_darwin.sh
.github/workflows/: build-lptools.yml
src/: CMakeLists.txt  headers.cmake
src/lib/: CMakeLists.txt  libbase.cmake  libcrypto.cmake  libcrypto_sources.cmake  libcrypto_utils.cmake  libcxx.cmake  libext4_utils.cmake  libfmtlib.cmake  libjsonpbparse.cmake  liblog.cmake  liblp.cmake  libsparse.cmake  libz.cmake
src/lptools/: CMakeLists.txt
src/lptools/partition_tools/: CMakeLists.txt  defs.h  dynamic_partitions_device_info.pb.cc  dynamic_partitions_device_info.pb.h  lpadd.cc  lpdump.cc  lpmake.cc  lpunpack.cc
src/lptools/sparse_tools/: CMakeLists.txt
src/lptools/sparse_tools/include/: libsparse_defs.h
